# tplayer

./: Cargo.toml  README.md
src/: jokes.rs  main.rs  mpv.rs
