[package]
authors = ["Yusuf Redzic <yusufredzic@gmail.com>"]
edition = "2018"
name = "tplayer"
version = "0.1.0"

[dependencies]
anyhow = "1.0.36"
dotenv = "0.15.0"
hashbrown = "0.9.1"
rand = "0.8.0"
serde_json = "1.0.60"
smol = "1.2.5"
twitchchat = { version = "0.14.8", features = ["async", "smol"] }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
panic = "abort"
